# fantasy_premier_league

./: README.md  pyproject.toml
fantasy_premier_league/: utils.py
fantasy_premier_league/models/: gameweek.py
tests/: conftest.py
tests/fixtures/: gameweek.json
tests/models/: test_gameweek.py
