[tool.poetry]
name = "fantasy_premier_league"
version = "0.1.0"
description = "Python library to easily access Fantasy Premier League API"
authors = ["Alex Gascón <alexgascon.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipython = "^8.2.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
